tests/ui/symbol-names/const-generics-demangling.legacy.stderr
error: symbol-name(_ZN1c48Unsigned$LT$const$u20$$u7b$$u20$11$u20$$u7d$$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Unsigned<const { 11 }>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Unsigned<const { 11 }>::f)
  --> $DIR/const-generics-demangling.rs:13:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c48Signed$LT$const$u20$$u7b$$u20$.152$u20$$u7d$$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Signed<const { .152 }>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Signed<const { .152 }>::f)
  --> $DIR/const-generics-demangling.rs:26:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c46Bool$LT$const$u20$$u7b$$u20$true$u20$$u7d$$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Bool<const { true }>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Bool<const { true }>::f)
  --> $DIR/const-generics-demangling.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1c59Char$LT$const$u20$$u7b$$u20$$u27$$u2202$$u27$$u20$$u7d$$GT$1f17h[HASH]E)
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(c::Char<const { '∂' }>::f::h[HASH])
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(c::Char<const { '∂' }>::f)
  --> $DIR/const-generics-demangling.rs:52:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

